<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disaster Tips</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="distintro">Disaster Survival Tips</string>
    <string name="typhbtn">How To Survive: Typhoon</string>
    <string name="erthbtn">How To Survive: Earthquake</string>
    <string name="ldslbtn">How To Survive: Landslide</string>
    <string name="tsnbtn">How To Survive: Tsunami</string>
    <string name="mnmbtn">How To Survive: Man-Made Disasters</string>
    <string name="title_activity_disptinfo">Typhoon</string>
    <string name="p1">Test1</string>
    <string name="title_activity_disttsuinfo">Tsunami</string>
    <string name="proto3">Test3</string>
    <string name="title_activity_disterinfo">Earthquake</string>
    <string name="proto2">Test2</string>
    <string name="title_activity_distmnminfo">Man-Made</string>
    <string name="proto5">Test5</string>
    <string name="title_activity_distlndinfo">Landslide</string>
    <string name="proto4">Test4</string>

</resources>
